--- a/projects/ts-etl-ui/src/load-request-message/load-request-message.component.html
+++ b/projects/ts-etl-ui/src/load-request-message/load-request-message.component.html
@@ -1,38 +1,28 @@
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 my-3">
   <mat-form-field>
-    <mat-label>Filter Activity</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Complete" #input>
+    <mat-label>Filter Messages</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. INFO" #input>
   </mat-form-field>
   <table mat-table [dataSource]="dataSource" matSort>
-    <caption>Load Request Activities</caption>
+    <caption>Load Messages</caption>
     <ng-container matColumnDef="componentName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Component name</th>
       <td mat-cell *matCellDef="let element"> {{element.componentName}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="startTime">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Start time</th>
-      <td mat-cell *matCellDef="let element"> {{element.startTime}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="endTime">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> End Time</th>
-      <td mat-cell *matCellDef="let element"> {{element.endTime}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="duration">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration</th>
-      <td mat-cell *matCellDef="let element"> {{element.duration}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status</th>
-      <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+    <ng-container matColumnDef="messageGroup">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Message Group</th>
+      <td mat-cell *matCellDef="let element"> {{element.messageGroup}} </td>
     </ng-container>
 
     <ng-container matColumnDef="messageType">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Message Type</th>
       <td mat-cell *matCellDef="let element"> {{element.messageType}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="tag">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Tag</th>
+      <td mat-cell *matCellDef="let element"> {{element.tag}} </td>
     </ng-container>
 
     <ng-container matColumnDef="message">
@@ -53,5 +43,5 @@
       <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
     </tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of activities"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of messages"></mat-paginator>
 </div>
