--- a/projects/ts-etl-ui/src/app/app.component.html
+++ b/projects/ts-etl-ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <button mat-raised-button routerLink="/">Home</button>
-  <span class="flex-1">
+  <span class="flex-1 flex justify-center">
     <ng-container *ngIf="serverInfo$ | async as serverInfo">
      <ng-container *ngIf="serverInfo.pr">You're viewing PR: {{serverInfo.pr}} With Db: {{serverInfo.db}}</ng-container>
     </ng-container>
