--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -74,13 +74,6 @@
           <td mat-cell *matCellDef="let row">{{row.codeSystemName}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="sourceFilePath">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Source File Path
-          </th>
-          <td mat-cell *matCellDef="let row">{{row.sourceFilePath}}</td>
-        </ng-container>
-
         <ng-container matColumnDef="requestSubject">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
@@ -92,8 +85,16 @@
         </ng-container>
 
         <ng-container matColumnDef="requestStatus">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Request Status
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="requestStatusInput" class="m-2" mat-sort-header disableClear>Status</label>
+              <select id="requestStatusInput" class="w-20" formControlName="requestStatus">
+                <option value="">ALL</option>
+                <option>In Progress</option>
+                <option>Complete</option>
+                <option>Failed</option>
+              </select>
+            </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestStatus}}</td>
         </ng-container>
