--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -115,6 +115,16 @@
           <td mat-cell *matCellDef="let row">{{row.type}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="requestTime">
+          <th mat-header-cell *matHeaderCellDef disableClear>
+            <div class="flex flex-col m-2">
+              <label for="requestTimeInput" class="m-2" mat-sort-header disableClear>Request Time</label>
+              <input id="requestTimeInput" matInput class="w-30" formControlName="requestTime" type="date">
+            </div>
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.requestTime.replace(' ', '') | date:'yyyy/MM/dd hh:mma':'GMT+05:00' }}</td>
+        </ng-container>
+
         <ng-container matColumnDef="availableDate">
           <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
             Available Date
@@ -127,13 +137,6 @@
             Requester
           </th>
           <td mat-cell *matCellDef="let row">{{row.requester}}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="requestTime">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
-            Request Time
-          </th>
-          <td mat-cell *matCellDef="let row">{{row.requestTime}}</td>
         </ng-container>
 
         <ng-container matColumnDef="expand">
