--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -3,13 +3,13 @@
     <div class="flex justify-between">
       <mat-form-field>
         <mat-label>Any Request date</mat-label>
-        <mat-select placeholder="Any Request date" formControlName="requestDateType">
-          <mat-option value="0">Any Request date</mat-option>
-          <mat-option value="1">Today's</mat-option>
-          <mat-option value="2">This week's</mat-option>
-          <mat-option value="3">Last week's</mat-option>
-          <mat-option value="4">This month's</mat-option>
-          <mat-option value="5">Last month's</mat-option>
+        <mat-select placeholder="Any Request date" formControlName="requestDateRange">
+          <mat-option value="">Any Request date</mat-option>
+          <mat-option value="today">Today's</mat-option>
+          <mat-option value="thisWeek">This week's</mat-option>
+          <mat-option value="lastWeek">Last week's</mat-option>
+          <mat-option value="thisMonth">This month's</mat-option>
+          <mat-option value="lastMonth">Last month's</mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field>
