--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -50,7 +50,8 @@
           <th mat-header-cell *matHeaderCellDef>
             <div class="flex flex-col m-2">
               <label for="requestIdFilterInput" class="m-2" mat-sort-header disableClear>Request ID</label>
-              <input id="requestIdFilterInput" class="w-3/4" matInput formControlName="requestId" placeholder="Ex. 148" type="number">
+              <input id="requestIdFilterInput" class="w-3/4" matInput formControlName="requestId" placeholder="Ex. 148"
+                     type="number">
             </div>
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestId}}</td>
@@ -59,7 +60,7 @@
         <ng-container matColumnDef="codeSystemName">
           <th mat-header-cell *matHeaderCellDef disableClear>
             <div class="flex flex-col m-2">
-              <label for="codeSystemSearch" class="m-2" mat-sort-header disableClear>Code System</label>
+              <label for="codeSystemSearch" class="m-2" mat-sort-header disableClear>Code System Name</label>
               <select id="codeSystemSearch" class="w-20" formControlName="codeSystemName">
                 <option value="">ALL</option>
                 <option>RXNORM</option>
@@ -70,7 +71,7 @@
                 <option>HPO</option>
               </select>
             </div>
-            </th>
+          </th>
           <td mat-cell *matCellDef="let row">{{row.codeSystemName}}</td>
         </ng-container>
 
@@ -122,7 +123,8 @@
               <input id="requestTimeInput" matInput class="w-30" formControlName="requestTime" type="date">
             </div>
           </th>
-          <td mat-cell *matCellDef="let row">{{row.requestTime.replace(' ', '') | date:'yyyy/MM/dd hh:mma':'GMT+05:00' }}</td>
+          <td mat-cell
+              *matCellDef="let row">{{row.requestTime.replace(' ', '') | date:'yyyy/MM/dd hh:mma':'GMT+05:00' }}</td>
         </ng-container>
 
         <ng-container matColumnDef="availableDate">
@@ -139,28 +141,22 @@
           <td mat-cell *matCellDef="let row">{{row.requester}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="expand">
-          <th mat-header-cell *matHeaderCellDef aria-label="row actions">Request Activity Detail</th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-flat-button aria-label="expand row" color="primary"
-                    (click)="fetchLoadRequestActivity($event,element)">
-              <ng-container *ngIf="expandedElement === element; else expandTemplate">
-                <mat-icon fontIcon="keyboard_arrow_up"></mat-icon>
-              </ng-container>
-              <ng-template #expandTemplate>
-                <mat-icon fontIcon="keyboard_arrow_down"></mat-icon>
-              </ng-template>
-            </button>
-          </td>
+        <ng-container matColumnDef="creationTime">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
+            Creation Time
+          </th>
+          <td mat-cell *matCellDef="let row">{{row.creationTime}}</td>
         </ng-container>
 
         <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
         <ng-container matColumnDef="expandedDetail">
-          <td mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand().length">
+          <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand().length">
             <div class="example-element-detail"
                  [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
               <div class="example-element-description" *ngIf="expandedElement === row">
+                <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
                 <app-load-request-activity [requestId]="row.requestId"></app-load-request-activity>
+                <app-load-request-message [loadRequestMessages]="row.loadRequestMessages"></app-load-request-message>
               </div>
             </div>
           </td>
@@ -170,7 +166,8 @@
 
         <tr mat-row *matRowDef="let row; columns: columnsToDisplayWithExpand();"
             class="example-element-row"
-            [class.example-expanded-row]="expandedElement === row">
+            [class.example-expanded-row]="expandedElement === row"
+            (click)="fetchLoadRequestActivity($event,row)">
         </tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
