--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -78,8 +78,11 @@
           <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
             <div class="w-full">
               <app-version-qa-detail [data]="row"></app-version-qa-detail>
+              <app-version-qa-activity [versionQaActivities]="row.activityHistory"
+                                       [requestId]="row.requestId"></app-version-qa-activity>
             </div>
           </div>
+          x
         </td>
       </ng-container>
 
