--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -50,24 +50,9 @@
       </ng-container>
       <ng-container matColumnDef="nbNotes">
         <th mat-header-cell *matHeaderCellDef> # of Notes</th>
-        <td mat-cell *matCellDef="let element"> {{element.notes.length}}
-          <button mat-flat-button aria-label="expand row" color="primary">
-            <ng-container *ngIf="expandedActivity === element; else expandTemplate">
-              <mat-icon fontIcon="keyboard_arrow_up"></mat-icon>
-            </ng-container>
-            <ng-template #expandTemplate>
-              <mat-icon fontIcon="keyboard_arrow_down"></mat-icon>
-            </ng-template>
-          </button>
-        </td>
+        <td mat-cell *matCellDef="let element"> {{element.notes.length}}</td>
       </ng-container>
       <tr mat-header-row *matHeaderRowDef="qaActivityColumns"></tr>
-      <tr>
-        <td>Current</td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
       <tr mat-row *matRowDef="let row; columns: qaActivityColumns;"
           [class.example-expanded-row]="expandedActivity === row"
           (click)="expandedActivity = expandedActivity === row ? null : row"></tr>
