--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -99,7 +99,6 @@
           </th>
           <td mat-cell *matCellDef="let row">{{row.requestStatus}}</td>
         </ng-container>
-        2
 
         <ng-container matColumnDef="type">
           <th mat-header-cell *matHeaderCellDef disableClear>
@@ -149,7 +148,6 @@
           <td mat-cell *matCellDef="let row">{{row.creationTime}}</td>
         </ng-container>
 
-        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
         <ng-container matColumnDef="expandedDetail">
           <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand().length">
             <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
@@ -163,14 +161,16 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand()"></tr>
+
         <tr mat-row *matRowDef="let row; columns: columnsToDisplayWithExpand();"
             class="example-element-row"
             [class.example-expanded-row]="expandedElement === row"
             (click)="expandedElement = expandedElement === row ? null : row;">
         </tr>
+
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
-        <tr *matNoDataRow>
+        <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="9">
             No results found.
           </td>
