--- a/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
+++ b/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
@@ -1,10 +1,12 @@
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 my-5">
   <mat-form-field>
     <mat-label>Filter Activity</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Accept" #input>
   </mat-form-field>
+
   <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
     <caption>Activity History</caption>
+
     <ng-container matColumnDef="sequence">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Sequence</th>
       <td mat-cell *matCellDef="let element"> {{element.sequence}}</td>
@@ -23,31 +25,35 @@
     <ng-container matColumnDef="nbNotes">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> # of Notes</th>
       <td mat-cell *matCellDef="let element"
-          (click)="expandedActivity = expandedActivity === element ? null : element">
+          (click)="expandedElement = expandedElement === element ? null : element">
         {{element.notes.length}}
       </td>
     </ng-container>
+
+    <ng-container matColumnDef="expandedDetail">
+      <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
+        <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
+          <div class="example-element-description" *ngIf="expandedElement === row">
+            <app-version-qa-note [versionQaNotes]="row.notes"></app-version-qa-note>
+          </div>
+        </div>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-        [class.example-expanded-row]="expandedActivity === row"></tr>
-    <!--    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>-->
+        class="example-element-row"
+        [class.example-expanded-row]="expandedElement === row"
+        (click)="expandedElement = expandedElement === row ? null : row">
+    </tr>
+
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
       <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
     </tr>
-
-    <!--    <ng-container matColumnDef="expandedDetail">-->
-    <!--      <td mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">-->
-    <!--        <div class="example-element-detail"-->
-    <!--             [@detailExpand]="row === expandedActivity ? 'expanded' : 'collapsed'">-->
-    <!--          <div class="m-2 w-full">-->
-    <!--            <app-version-qa-note [versionQaNotes]="row.notes"></app-version-qa-note>-->
-    <!--          </div>-->
-    <!--        </div>-->
-    <!--      </td>-->
-    <!--    </ng-container>-->
   </table>
   <button mat-raised-button color="primary" (click)="action('Accept')">Accept</button>
   <button mat-raised-button color="warn" (click)="action('Reject')">Reject</button>
