--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -148,11 +148,9 @@
           <td mat-cell *matCellDef="let row">{{row.creationTime}}</td>
         </ng-container>
 
-        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
         <ng-container matColumnDef="expandedDetail">
           <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand().length">
-            <div class="example-element-detail"
-                 [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
               <div class="example-element-description" *ngIf="expandedElement === row">
                 <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
                 <app-load-request-activity [requestId]="row.requestId"></app-load-request-activity>
@@ -167,11 +165,12 @@
         <tr mat-row *matRowDef="let row; columns: columnsToDisplayWithExpand();"
             class="example-element-row"
             [class.example-expanded-row]="expandedElement === row"
-            (click)="fetchLoadRequestActivity($event,row)">
+            (click)="expandedElement = expandedElement === row ? null : row;">
         </tr>
+
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
-        <tr *matNoDataRow>
+        <tr class="mat-row" *matNoDataRow>
           <td class="mat-cell" colspan="9">
             No results found.
           </td>
