--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -1,85 +1,34 @@
-<mat-card>
-  <mat-card-content>
-    <table class="mat-elevation-z8" mat-table [dataSource]="dataSource">
-      <!-- Key Column -->
-      <ng-container matColumnDef="key">
-        <th mat-header-cell *matHeaderCellDef>Key</th>
-        <td mat-cell *matCellDef="let element">{{element.label}}</td>
-      </ng-container>
+<table class="mat-elevation-z8 my-3" mat-table [dataSource]="dataSource">
+  <!-- Key Column -->
+  <ng-container matColumnDef="key">
+    <th mat-header-cell *matHeaderCellDef>Key</th>
+    <td mat-cell *matCellDef="let element">{{element.label}}</td>
+  </ng-container>
 
-      <!-- Value Column -->
-      <ng-container matColumnDef="value">
-        <th mat-header-cell *matHeaderCellDef>Value</th>
-        <td mat-cell *matCellDef="let element">
-          <div class="flex justify-between" [ngSwitch]="element.key">
-            {{element.value}}
-            <button mat-raised-button *ngSwitchCase="'requestId'">Go to QA Report</button>
-            <button mat-raised-button *ngSwitchCase="'version'">Analyze Code System Data</button>
-            <button mat-raised-button *ngSwitchCase="'loadNumber'">Analyze Row Source Data</button>
-            <button mat-raised-button *ngSwitchCase="'sourceFilePath'"
-                    (click)="openSourceDataFileModal()">
-              View Source Data Files
-            </button>
-            <ng-container *ngSwitchDefault></ng-container>
-          </div>
-        </td>
-      </ng-container>
+  <!-- Value Column -->
+  <ng-container matColumnDef="value">
+    <th mat-header-cell *matHeaderCellDef>Value</th>
+    <td mat-cell *matCellDef="let element">
+      <div class="flex justify-between" [ngSwitch]="element.key">
+        {{element.value}}
+        <button mat-raised-button *ngSwitchCase="'requestId'">Go to QA Report</button>
+        <button mat-raised-button *ngSwitchCase="'version'">Analyze Code System Data</button>
+        <button mat-raised-button *ngSwitchCase="'loadNumber'">Analyze Row Source Data</button>
+        <button mat-raised-button *ngSwitchCase="'sourceFilePath'"
+                (click)="openSourceDataFileModal()">
+          View Source Data Files
+        </button>
+        <ng-container *ngSwitchDefault></ng-container>
+      </div>
+    </td>
+  </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-      <tr *matNoDataRow>
-        <td class="mat-cell" colspan="9">
-          No results found.
-        </td>
-      </tr>
-    </table>
-    <table class="mat-elevation-z8" mat-table [dataSource]="qaActivityHistory()" multiTemplateDataRows>
-      <caption>Activity History</caption>
-      <ng-container matColumnDef="sequence">
-        <th mat-header-cell *matHeaderCellDef> Sequence</th>
-        <td mat-cell *matCellDef="let i = dataIndex"> {{i}} </td>
-      </ng-container>
-      <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef> Action</th>
-        <td mat-cell *matCellDef="let element"> {{element.action}} </td>
-      </ng-container>
-      <ng-container matColumnDef="updatedTime">
-        <th mat-header-cell *matHeaderCellDef> Updated Time</th>
-        <td mat-cell *matCellDef="let element"> {{element.updatedTime}} </td>
-      </ng-container>
-      <ng-container matColumnDef="nbNotes">
-        <th mat-header-cell *matHeaderCellDef> # of Notes</th>
-        <td mat-cell *matCellDef="let element"> {{element.notes.length}}</td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="qaActivityColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: qaActivityColumns;"
-          [class.example-expanded-row]="expandedActivity === row"
-          (click)="expandedActivity = expandedActivity === row ? null : row"></tr>
-      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-
-      <tr *matNoDataRow>
-        <td class="mat-cell" colspan="9">
-          No results found.
-        </td>
-      </tr>
-
-      <ng-container matColumnDef="expandedDetail">
-        <td mat-cell *matCellDef="let row" [attr.colspan]="qaActivityColumns.length">
-          <div class="example-element-detail"
-               [@detailExpand]="row === expandedActivity ? 'expanded' : 'collapsed'">
-            <div class="m-2 w-full">
-              <app-version-qa-note [versionQaNotes]="row.notes"></app-version-qa-note>
-            </div>
-          </div>
-        </td>
-      </ng-container>
-
-    </table>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="action('Accept')">Accept</button>
-    <button mat-raised-button color="warn" (click)="action('Reject')">Reject</button>
-  </mat-card-actions>
-</mat-card>
-
+  <tr *matNoDataRow>
+    <td class="mat-cell" colspan="9">
+      No results found.
+    </td>
+  </tr>
+</table>
