--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -57,10 +57,14 @@
       <ng-container matColumnDef="expandedDetail">
         <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
           <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
-            <div class="example-element-description" *ngIf="expandedElement === row">
-              <!--              <app-version-qa-detail [versionQA]="row"></app-version-qa-detail>-->
-              <app-version-qa-activity [versionQaActivities]="row.versionQaActivities"
-                                       [requestId]="row.requestId"></app-version-qa-activity>
+            <div class="example-element-description flex" *ngIf="expandedElement === row"
+                 style="flex-flow: row wrap; align-items: stretch">
+              <div style="flex-grow: 1">
+                <app-version-qa-detail [versionQA]="row"></app-version-qa-detail>
+              </div>
+              <div style="flex-grow: 2">
+                <app-version-qa-activity [versionQaActivities]="row.versionQaActivities" [requestId]="row.requestId"></app-version-qa-activity>
+              </div>
             </div>
           </div>
         </td>
