--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -56,17 +56,21 @@
       <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
       <ng-container matColumnDef="expandedDetail">
         <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
-          <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'"  *ngIf="expandedElement === row">
-            <div class="flex" style="flex-grow: 1">
-              <app-version-qa-detail [versionQA]="row"></app-version-qa-detail>
+          <div class="example-element-detail flex-col" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'"  *ngIf="expandedElement === row">
+            <!-- <div class="flex" style="flex-grow: 1">
+              <app-version-qa-detail [versionQA]="row" class="flex flex-grow"></app-version-qa-detail>
             </div>
             <div class="flex" style="flex-grow: 2">
-              <app-version-qa-activity [versionQaActivities]="row.versionQaActivities" [requestId]="row.requestId"></app-version-qa-activity>
+              <app-version-qa-activity [versionQaActivities]="row.versionQaActivities" [requestId]="row.requestId"  class="flex flex-grow"></app-version-qa-activity>
+            </div> -->
+            <div class="flex">
+              <div class="flex"style="flex-grow:1;background-color:#0a3069">Hello</div>
+              <div class="flex"style="flex-grow:2;background-color:#0dbc79">World</div>  
             </div>
-          </div>
+            <div class="flex"style="flex-direction:column;flex-grow:1;background-color:#9e3670">QA Activites</div>
+          </div>        
         </td>
       </ng-container>
-
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"
           class="example-element-row"
