--- a/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
+++ b/projects/ts-etl-ui/src/version-qa-detail/version-qa-detail.component.html
@@ -1,30 +1,15 @@
 <table class="mat-elevation-z8 my-3" mat-table [dataSource]="dataSource">
-  <!-- Key Column -->
   <ng-container matColumnDef="key">
     <th mat-header-cell *matHeaderCellDef>Key</th>
-    <td mat-cell *matCellDef="let element">{{element.label}}</td>
+    <td mat-cell *matCellDef="let element" class="text-right text-nowrap">{{element.key}}</td>
   </ng-container>
 
-  <!-- Value Column -->
   <ng-container matColumnDef="value">
     <th mat-header-cell *matHeaderCellDef>Value</th>
-    <td mat-cell *matCellDef="let element">
-      <div class="flex justify-between" [ngSwitch]="element.key">
-        {{element.value}}
-        <button mat-raised-button *ngSwitchCase="'requestId'">Go to QA Report</button>
-        <button mat-raised-button *ngSwitchCase="'version'">Analyze Code System Data</button>
-        <button mat-raised-button *ngSwitchCase="'loadNumber'">Analyze Row Source Data</button>
-        <button mat-raised-button *ngSwitchCase="'sourceFilePath'"
-                (click)="openSourceDataFileModal()">
-          View Source Data Files
-        </button>
-        <ng-container *ngSwitchDefault></ng-container>
-      </div>
-    </td>
+    <td mat-cell *matCellDef="let element">{{element.value}}</td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="h-5"></tr>
 
   <tr *matNoDataRow>
     <td class="mat-cell" colspan="9">
