--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -10,7 +10,8 @@
 
       <ng-container matColumnDef="loadNumber">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Load Number</th>
-        <td mat-cell *matCellDef="let row" (click)="expandedElement = expandedElement === row ? null : row"><a href="#">{{row.loadNumber}}</a></td>
+        <td mat-cell *matCellDef="let row" (click)="expandedElement = expandedElement === row ? null : row">
+          <a>{{row.loadNumber}}</a></td>
       </ng-container>
 
       <ng-container matColumnDef="codeSystemName">
@@ -70,7 +71,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"
           class="example-element-row"
           [class.example-expanded-row]="expandedElement === row"
-          >
+      >
       </tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
 
