QA Activities Section

--- a/projects/ts-etl-ui/src/styles.scss
+++ b/projects/ts-etl-ui/src/styles.scss
@@ -67,3 +67,8 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-description {
   padding: 16px;
 }
+
+fieldset {
+  border-width: 4px;
+  border-radius: 16px;
+}
