--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -64,7 +64,7 @@
               <div class="m-2" style="flex-grow:0.65;background-color:#0dbc79">Load Summary and QA Actions go here!</div>
             </div>
             <div class="flex" style="flex-grow:1">
-              <fieldset style="border-width: 4px; border-radius: 16px;">
+              <fieldset>
                 <legend>QA Acceptance</legend>
                 <app-version-qa-activity [versionQaActivities]="row.versionQaActivities" [requestId]="row.requestId"  class="flex flex-grow"></app-version-qa-activity>
               </fieldset>
