--- a/projects/ts-etl-ui/src/styles.scss
+++ b/projects/ts-etl-ui/src/styles.scss
@@ -72,3 +72,9 @@ fieldset {
   border-width: 4px;
   border-radius: 16px;
 }
+
+.fake-link {
+  cursor: pointer;
+  color: blue;
+  text-decoration: underline;
+}
