Loadnumber >> load summary >> load component (#141)
* Add QA Components

* fix test

* fix test

---------

Co-authored-by: Ludet <ludetc@nih.gov>

--- a/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
+++ b/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
@@ -2,7 +2,7 @@
 
   <fieldset>
     <legend>QA Activites</legend>
-    <table mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
+    <table data-testid="qaActivitiesTable" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
       <caption>Activity History</caption>
 
       <ng-container matColumnDef="id">
