change load request api

--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -43,8 +43,7 @@
   <div class="mat-elevation-z8 m-5">
     <div class="example-table-container">
       <table mat-table [dataSource]="data()" class="example-table" multiTemplateDataRows
-             matSort matSortActive="requestId" matSortDisableClear matSortDirection="asc"
-             formGroupName="filters">
+             matSort matSortActive="requestId" matSortDisableClear matSortDirection="asc">
 
         <ng-container matColumnDef="requestId">
           <th mat-header-cell *matHeaderCellDef>
