--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -23,7 +23,7 @@
         <mat-icon fontIcon="search"></mat-icon>
         Search
       </button>
-      <button mat-fab extended type="reset">
+      <button mat-fab extended [routerLink]="['/manage/load-request']">
         <mat-icon fontIcon="clear"></mat-icon>
         Reset
       </button>
