--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -5,7 +5,8 @@
 
       <ng-container matColumnDef="requestId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Request ID</th>
-        <td mat-cell *matCellDef="let row">{{row.requestId}}</td>
+        <td mat-cell *matCellDef="let row">
+          <a routerLink="/manage/load-request" [queryParams]="{requestId:row.requestId}">{{row.requestId}} </a></td>
       </ng-container>
 
       <ng-container matColumnDef="loadNumber">
