--- a/projects/ts-etl-ui/src/version-qa-acceptance-actions/version-qa-acceptance-actions.component.html
+++ b/projects/ts-etl-ui/src/version-qa-acceptance-actions/version-qa-acceptance-actions.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="versionQA().versionStatus === 'Pending QA'">
+<ng-container *ngIf="versionQA.versionStatus === 'Pending QA'">
   <button mat-raised-button color="primary" (click)="action('Accept')">Accept</button>
   <button mat-raised-button color="warn" (click)="action('Reject')">Reject</button>
 </ng-container>
