--- a/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
+++ b/projects/ts-etl-ui/src/version-qa-activity/version-qa-activity.component.html
@@ -1,8 +1,8 @@
 <div class="mat-elevation-z8 my-5">
 
   <fieldset>
-    <legend>QA Activites</legend>
-    <table data-testid="qaActivitiesTable" mat-table [dataSource]="dataSource" matSort multiTemplateDataRows>
+    <legend>QA Activities</legend>
+    <table data-testid="qaActivitiesTable" mat-table [dataSource]="dataSource()" matSort multiTemplateDataRows>
       <caption>Activity History</caption>
 
       <ng-container matColumnDef="id">
@@ -44,6 +44,12 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="9">
+          No activities found.
+        </td>
+      </tr>
 
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"
           class="example-element-row"
