--- a/projects/ts-etl-ui/src/code-system-version/code-system-version.component.html
+++ b/projects/ts-etl-ui/src/code-system-version/code-system-version.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z8 m-5">
+<div class="mat-elevation-z8 ">
     <mat-form-field>
         <mat-label>Filter</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Draft" #input>
