--- a/projects/ts-etl-ui/src/app/app.component.scss
+++ b/projects/ts-etl-ui/src/app/app.component.scss
@@ -1,3 +1,9 @@
 .isActive {
   background-color: #005cbb1a !important;
 }
+
+.mat-toolbar.mat-toolbar-single-row {
+  background-color: #d7e3ff !important;
+}
+
+
