Load Summary > QA Rules

--- a/projects/ts-etl-ui/src/load-summary/load-summary.component.html
+++ b/projects/ts-etl-ui/src/load-summary/load-summary.component.html
@@ -34,3 +34,5 @@
     <tr mat-row *matRowDef="let element; columns: summaryColumns"></tr>
   </table>
 </fieldset>
+
+<app-version-qa-rules [qaRules]="loadSummary.qaRules"></app-version-qa-rules>
