--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -25,7 +25,7 @@
         <mat-icon fontIcon="search"></mat-icon>
         Search
       </button>
-      <button mat-fab extended routerLink="/load-request" type="reset">
+      <button mat-fab extended routerLink="/load-requests" type="reset">
         <mat-icon fontIcon="clear"></mat-icon>
         Reset
       </button>
