--- a/projects/ts-etl-ui/src/load-request-message/load-request-message.component.html
+++ b/projects/ts-etl-ui/src/load-request-message/load-request-message.component.html
@@ -1,10 +1,10 @@
-<div class="mat-elevation-z8 my-3">
+<fieldset>
+  <legend>Load Messages</legend>
   <mat-form-field>
     <mat-label>Filter Messages</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. INFO" #input>
   </mat-form-field>
-  <table mat-table [dataSource]="dataSource" matSort>
-    <caption>Load Messages</caption>
+  <table mat-table [dataSource]="dataSource" matSort class="my-expanded-table">
     <ng-container matColumnDef="componentName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Component name</th>
       <td mat-cell *matCellDef="let element"> {{element.componentName}} </td>
@@ -44,4 +44,4 @@
     </tr>
   </table>
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of messages"></mat-paginator>
-</div>
+</fieldset>
