--- a/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
+++ b/projects/ts-etl-ui/src/load-request-detail/load-request-detail.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z8 my-3">
-  <table mat-table [dataSource]="dataSource">
+  <table mat-table [dataSource]="dataSource" class="my-expanded-table">
     <!-- Key Column -->
     <ng-container matColumnDef="key">
       <th mat-header-cell *matHeaderCellDef>Key</th>
