--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -159,10 +159,13 @@
           <td class="bg-gray-100" mat-cell *matCellDef="let row" [attr.colspan]="columnsToDisplayWithExpand().length">
             <div class="example-element-detail" [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
               <div class="example-element-description" *ngIf="expandedElement === row">
-                <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
-                <app-load-request-activity [requestId]="row.requestId"
-                                           [loadRequestActivities]="row.loadRequestActivities"></app-load-request-activity>
-                <app-load-request-message [loadRequestMessages]="row.loadRequestMessages"></app-load-request-message>
+                <fieldset>
+                  <legend>Load Request</legend>
+                  <app-load-request-detail [loadRequest]="row"></app-load-request-detail>
+                  <app-load-request-activity [requestId]="row.requestId"
+                                             [loadRequestActivities]="row.loadRequestActivities"></app-load-request-activity>
+                  <app-load-request-message [loadRequestMessages]="row.loadRequestMessages"></app-load-request-message>
+                </fieldset>
               </div>
             </div>
           </td>
