--- a/projects/ts-etl-ui/src/load-request/load-request.component.html
+++ b/projects/ts-etl-ui/src/load-request/load-request.component.html
@@ -25,7 +25,7 @@
         <mat-icon fontIcon="search"></mat-icon>
         Search
       </button>
-      <button mat-fab extended routerLink="/manage/load-request" type="reset">
+      <button mat-fab extended routerLink="/load-requests" type="reset">
         <mat-icon fontIcon="clear"></mat-icon>
         Reset
       </button>
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <div class="mat-elevation-z8 m-5">
+  <div class="mat-elevation-z8 ">
     <div class="example-table-container">
       <table mat-table [dataSource]="data()" class="example-table" multiTemplateDataRows
              matSort matSortActive="requestId" matSortDisableClear matSortDirection="asc"
