--- a/projects/ts-etl-ui/src/version-qa/version-qa.component.html
+++ b/projects/ts-etl-ui/src/version-qa/version-qa.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z8 m-5">
+<div class="mat-elevation-z8">
   <div class="example-table-container">
     <table mat-table [dataSource]="data" class="example-table" multiTemplateDataRows
            matSort matSortActive="requestId" matSortDisableClear matSortDirection="asc">
@@ -6,7 +6,7 @@
       <ng-container matColumnDef="requestId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>Request ID</th>
         <td mat-cell *matCellDef="let row">
-          <a routerLink="/manage/load-request" [queryParams]="{requestId:row.requestId}">{{row.requestId}} </a></td>
+          <a routerLink="/load-requests" [queryParams]="{requestId:row.requestId}">{{row.requestId}} </a></td>
       </ng-container>
 
       <ng-container matColumnDef="loadNumber">
